Correction anim - z-index

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1658,6 +1658,18 @@ footer .scroll .fa {
 .zone.diapo div.logo .no-slide.no-swiper-slide {
   position: absolute;
 }
+.zone.diapo div.logo .no-slide.no-swiper-slide:nth-child(2) {
+  z-index: 5;
+}
+.zone.diapo div.logo .no-slide.no-swiper-slide:nth-child(3) {
+  z-index: 3;
+}
+.zone.diapo div.logo .no-slide.no-swiper-slide:nth-child(4) {
+  z-index: 2;
+}
+.zone.diapo div.logo .no-slide.no-swiper-slide:nth-child(4) img {
+  height: 10rem;
+}
 .zone.diapo:before {
   content: "";
   position: absolute;
