--- a/app/public/css/zone/diapo.less
+++ b/app/public/css/zone/diapo.less
@@ -15,6 +15,21 @@
     width: 100%;
     .no-slide.no-swiper-slide {
       position: absolute;
+      &:nth-child(2) {
+        z-index: 5;
+      }
+      &:nth-child(3) {
+        z-index: 3;
+      }
+      &:nth-child(4) {
+        z-index: 2;
+        img {
+          height: 10rem;
+        }
+      }
+      &:nth-child(5) {
+
+      }
     }
   }
 
